force-app/main/default/objects/OpportunityLineItem/fields/ShortPiece__c.field-meta.xml
<CustomField>
    <fullName>ShortPiece__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Short Piece</label>
    <type>Checkbox</type>
</CustomField>