force-app/main/default/objects/OpportunityLineItem/fields/Simax__c.field-meta.xml
<CustomField>
    <fullName>Simax__c</fullName>
    <label>Si max</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>