force-app/main/default/objects/OpportunityLineItem/fields/Simin__c.field-meta.xml
<CustomField>
    <fullName>Simin__c</fullName>
    <label>Si min</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>