force-app/main/default/objects/OpportunityLineItem/fields/Smax__c.field-meta.xml
<CustomField>
    <fullName>Smax__c</fullName>
    <label>S max</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>