force-app/main/default/objects/OpportunityLineItem/fields/Snmax__c.field-meta.xml
<CustomField>
    <fullName>Snmax__c</fullName>
    <label>Sn max</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>