force-app/main/default/objects/OpportunityLineItem/fields/Snmin__c.field-meta.xml
<CustomField>
    <fullName>Snmin__c</fullName>
    <label>Sn min</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>