force-app/main/default/objects/OpportunityLineItem/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>No Offer</fullName>
            </value>
            <value>
                <fullName>Offer Later</fullName>
            </value>
            <value>
                <fullName>-None-</fullName>
                <isActive>false</isActive>
                <label>-None-</label>
            </value>
            <value>
                <fullName>Lost</fullName>
                <isActive>false</isActive>
                <label>Lost</label>
            </value>
            <value>
                <fullName>Won</fullName>
                <isActive>false</isActive>
                <label>Won</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>