force-app/main/default/objects/OpportunityLineItem/fields/SteelGrade__c.field-meta.xml
<CustomField>
    <fullName>SteelGrade__c</fullName>
    <formula>IF(ISBLANK(SemiFinishedGoods__c), FinishedGoods__r.SteelGradeLookup__c, SemiFinishedGoods__r.SteelGrade__c)</formula>
    <label>Steel Grade</label>
    <type>Text</type>
</CustomField>