force-app/main/default/objects/OpportunityLineItem/fields/Surcharge1__c.field-meta.xml
<CustomField>
    <fullName>Surcharge1__c</fullName>
    <label>Surcharge 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>