force-app/main/default/objects/OpportunityLineItem/fields/Surcharge1Description__c.field-meta.xml
<CustomField>
    <fullName>Surcharge1Description__c</fullName>
    <label>Surcharge 1 Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>