force-app/main/default/objects/OpportunityLineItem/fields/Surcharge2__c.field-meta.xml
<CustomField>
    <fullName>Surcharge2__c</fullName>
    <label>Surcharge 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>