force-app/main/default/objects/OpportunityLineItem/fields/Surcharge2Description__c.field-meta.xml
<CustomField>
    <fullName>Surcharge2Description__c</fullName>
    <label>Surcharge 2 Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>