force-app/main/default/objects/OpportunityLineItem/fields/Surcharge3__c.field-meta.xml
<CustomField>
    <fullName>Surcharge3__c</fullName>
    <label>Surcharge 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>