force-app/main/default/objects/OpportunityLineItem/fields/Surcharge3Description__c.field-meta.xml
<CustomField>
    <fullName>Surcharge3Description__c</fullName>
    <label>Surcharge 3 Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>