force-app/main/default/objects/OpportunityLineItem/fields/SurfaceCondition__c.field-meta.xml
<CustomField>
    <fullName>SurfaceCondition__c</fullName>
    <label>Surface Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SurfaceCondition</valueSetName>
    </valueSet>
</CustomField>