force-app/main/default/objects/OpportunityLineItem/fields/SurfaceInspection__c.field-meta.xml
<CustomField>
    <fullName>SurfaceInspection__c</fullName>
    <label>Surface Inspection</label>
    <length>100</length>
    <type>Text</type>
</CustomField>