force-app/main/default/objects/OpportunityLineItem/fields/TechnicalRequirement__c.field-meta.xml
<CustomField>
    <fullName>TechnicalRequirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The technical requirement that resulted in this OLI</description>
    <label>Technical Requirement</label>
    <referenceTo>TechnicalRequirement__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>