force-app/main/default/objects/OpportunityLineItem/fields/Timax__c.field-meta.xml
<CustomField>
    <fullName>Timax__c</fullName>
    <label>Ti max</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>