force-app/main/default/objects/OpportunityLineItem/fields/Timin__c.field-meta.xml
<CustomField>
    <fullName>Timin__c</fullName>
    <label>Ti min</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>