force-app/main/default/objects/OpportunityLineItem/fields/ToleranceAMinus__c.field-meta.xml
<CustomField>
    <fullName>ToleranceAMinus__c</fullName>
    <label>Tolerance A-</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>