force-app/main/default/objects/OpportunityLineItem/fields/ToleranceBMinus__c.field-meta.xml
<CustomField>
    <fullName>ToleranceBMinus__c</fullName>
    <label>Tolerance B-</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>