force-app/main/default/objects/OpportunityLineItem/fields/TransportVehicle__c.field-meta.xml
<CustomField>
    <fullName>TransportVehicle__c</fullName>
    <label>Transport Vehicle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>18</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>31</fullName>
            </value>
            <value>
                <fullName>35</fullName>
            </value>
            <value>
                <fullName>38</fullName>
            </value>
            <value>
                <fullName>40</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>51</fullName>
            </value>
            <value>
                <fullName>52</fullName>
            </value>
            <value>
                <fullName>53</fullName>
            </value>
            <value>
                <fullName>54</fullName>
            </value>
            <value>
                <fullName>55</fullName>
            </value>
            <value>
                <fullName>56</fullName>
            </value>
            <value>
                <fullName>57</fullName>
            </value>
            <value>
                <fullName>58</fullName>
            </value>
            <value>
                <fullName>59</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>61</fullName>
            </value>
            <value>
                <fullName>62</fullName>
            </value>
            <value>
                <fullName>63</fullName>
            </value>
            <value>
                <fullName>64</fullName>
            </value>
            <value>
                <fullName>65</fullName>
            </value>
            <value>
                <fullName>66</fullName>
            </value>
            <value>
                <fullName>67</fullName>
            </value>
            <value>
                <fullName>68</fullName>
            </value>
            <value>
                <fullName>69</fullName>
            </value>
            <value>
                <fullName>70</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>