force-app/main/default/objects/OpportunityLineItem/fields/UnitOfMeasurement__c.field-meta.xml
<CustomField>
    <fullName>UnitOfMeasurement__c</fullName>
    <label>Unit Of Measurement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MM</fullName>
                <default>true</default>
                <label>MM</label>
            </value>
            <value>
                <fullName>Inch</fullName>
            </value>
            <value>
                <fullName>Feet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>