force-app/main/default/objects/OpportunityLineItem/fields/UsePricingTool__c.field-meta.xml
<CustomField>
    <fullName>UsePricingTool__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Pricing Tool</label>
    <type>Checkbox</type>
</CustomField>