force-app/main/default/objects/OpportunityLineItem/validationRules/CannotEnterOfferedPriceWhenUsingTool.validationRule-meta.xml
<ValidationRule>
    <fullName>CannotEnterOfferedPriceWhenUsingTool</fullName>
    <active>true</active>
    <description>Cannot Enter Final Price when use Pricing Tool Checkbox is checked in Detail tab</description>
    <errorConditionFormula>!ISCHANGED(UsePricingTool__c ) &amp;&amp;
(UsePricingTool__c &amp;&amp; FinalPrice__c != 0)</errorConditionFormula>
    <errorMessage>Pricing Tool is active for the opportunity respectively opportunity line item. Please enter the price in the Pricing Tool.</errorMessage>
</ValidationRule>